--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       name="description"
       content="Leila Daraei's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
-    <title>Portfolio-homework</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -22,7 +21,19 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio Project</title>
     <link rel="stylesheet" href="/style/app.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="d-flex bg-warning">
+      <h1>Hello</h1>
+      <p>HI there</p>
+    </div>
+  </body>
 </html>
