--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/199af645e7.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -34,6 +38,7 @@
     <div class="d-flex bg-warning">
       <h1>Hello</h1>
       <p>HI there</p>
+      <i class="fa-brands fa-instagram"></i>
     </div>
   </body>
 </html>
