--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
     ></script>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello</h1>
-      <p>HI there</p>
-      <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>Hi I am</p>
+      <h1>Leila Daraei</h1>
+      <h2 class="mb-5">Frontend Developer based in Germany</h2>
+      <div><a href="#contact" class="btn btn-branding">Contact me</a></div>
     </div>
   </body>
 </html>
