--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Dictionary project</h2>
+            <h2>Dictionary project</h2>
             <p class="mb-4 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
