added about section, changed name

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Leila Daraei's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
+      content="Patricia Pereira's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
     <title>Portfolio Project</title>
 
@@ -37,8 +37,8 @@
   <body>
     <div class="hero">
       <p>Hi I am</p>
-      <h1>Leila Daraei</h1>
-      <h2 class="mb-5">Frontend Developer based in Germany</h2>
+      <h1>Patricia Pereira</h1>
+      <h2 class="mb-5">Frontend Developer based in Portugal</h2>
       <div><a href="#contact" class="btn btn-branding">Contact me</a></div>
     </div>
     <p class="text-center m-5">
