--- a/index.html
+++ b/index.html
@@ -37,9 +37,20 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <img src="pictures/logo.png" alt="logo" class="logo" />
+        <a href="/">
+          <img
+            src="pictures/logo.png"
+            alt="logo"
+            class="logo d-none d-md-block"
+          />
+          <img
+            src="pictures/logo-small.jpeg"
+            alt="logo"
+            class="logo d-block d-md-none"
+          />
+        </a>
         <ul>
-          <li><a href="/">Home</a></li>
+          <li><a class="active" href="/">Home</a></li>
           <li><a href="/about.html">About</a></li>
           <li><a href="/work.html">Work</a></li>
           <li><a href="/contact.html">Contact</a></li>
