--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,28 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img
+            src="pictures/logo.png"
+            alt="logo"
+            class="logo d-none d-md-block"
+          />
+          <img
+            src="pictures/logo-small.jpeg"
+            alt="logo"
+            class="logo d-block d-md-none"
+          />
+        </a>
+        <ul>
+          <li><a class="active" href="/">Home</a></li>
+          <li><a href="/about.html">About</a></li>
+          <li><a href="/work.html">Work</a></li>
+          <li><a href="/contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="content">
         <h1 class="mb-5 col-lg-8">Let's get in touch!</h1>
