--- a/index.html
+++ b/index.html
@@ -130,6 +130,33 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between mb-5">
+          <div>
+            <h4>Work Inquiry</h4>
+            <p>Lets work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:leila@daraei.me" class="email-link"
+            >leila@daraei.me
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https//www.instagram.com/leila">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https//www.github.com/leila">
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https//www.twitter.com/leila">
+            <i class="fa-brands fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
