--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
         </div>
       </div>
       <footer>
-        <div class="contact-box d-flex justify-content-between mb-5">
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
           <div>
             <h4>Work Inquiry</h4>
             <p>Lets work together</p>
