--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <nav class="d-flex justify-content-between">
         <a href="/">
           <img
-            src="pictures/logo.png"
+            src="pictures/logo-large.png"
             alt="logo"
             class="logo d-none d-md-block"
           />
@@ -136,10 +136,10 @@
         >
           <div>
             <h4>Work Inquiry</h4>
-            <p>Lets work together</p>
+            <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding">Contact me</a>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
