--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
       <nav class="d-flex justify-content-between">
         <a href="/">
           <img
-            src="pictures/logo.png"
+            src="pictures/logo-large.png"
             alt="logo"
             class="logo d-none d-md-block"
           />
@@ -57,28 +57,59 @@
         </ul>
       </nav>
     </div>
-    <div class="content-container container">
-      <div class="row">
-        <div class="col-lg-6">
-          <div class="content">
-            <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-            <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
-            <p class="mb-5">
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="#" class="btn btn-branding">See my projects</a>
+    <div class="container">
+      <div class="content-container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="content">
+              <h1 class="mb-4">Hi I am Patricia Pereira</h1>
+              <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
+              <p class="mb-5">
+                For anyone who wants to start learning code, this workshop is
+                very interesting. You will be challenged with different
+                exercises, and everything is well explained, homework and
+                deadlines are good for keep focus
+              </p>
+              <a href="#" class="btn btn-branding">See my projects</a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <img
+              src="/pictures/her.png"
+              alt="Patricia Pereira"
+              class="img-fluid"
+            />
           </div>
         </div>
-        <div class="col-lg-6">
-          <img
-            src="/pictures/her.png"
-            alt="Patricia Pereira"
-            class="img-fluid"
-          />
-        </div>
+        <footer>
+          <div
+            class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+          >
+            <div>
+              <h4>Work Inquiry</h4>
+              <p class="text-muted">Let's work together</p>
+            </div>
+            <div>
+              <a href="" class="btn btn-branding mt-3">Contact me</a>
+            </div>
+          </div>
+          <div class="d-flex justify-content-center mb-5">
+            <a href="mailto:leila@daraei.me" class="email-link"
+              >leila@daraei.me
+            </a>
+          </div>
+          <div class="social-links d-flex justify-content-center">
+            <a href="https//www.instagram.com/leila">
+              <i class="fa-brands fa-instagram"></i
+            ></a>
+            <a href="https//www.github.com/leila">
+              <i class="fa-brands fa-github"></i
+            ></a>
+            <a href="https//www.twitter.com/leila">
+              <i class="fa-brands fa-twitter"></i
+            ></a>
+          </div>
+        </footer>
       </div>
     </div>
   </body>
