--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
       <nav class="d-flex justify-content-between">
         <a href="/">
           <img
-            src="pictures/logo.png"
+            src="pictures/logo-large.png"
             alt="logo"
             class="logo d-none d-md-block"
           />
@@ -109,6 +109,35 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+            <a href="" class="btn btn-branding mt-3">Contact me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+          <a href="mailto:leila@daraei.me" class="email-link"
+            >leila@daraei.me
+          </a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https//www.instagram.com/leila">
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+          <a href="https//www.github.com/leila">
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https//www.twitter.com/leila">
+            <i class="fa-brands fa-twitter"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
