--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Patricia Pereira's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
-    <title>Portfolio Project</title>
+    <title>Front-end developer - Patricia Pereira</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -37,23 +37,25 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
+        <a href="/" title="Home page">
           <img
             src="pictures/logo-large.png"
-            alt="logo"
+            alt="Patricia logo"
             class="logo d-none d-md-block"
           />
           <img
             src="pictures/logo-small.jpeg"
-            alt="logo"
+            alt="Patricia logo"
             class="logo d-block d-md-none"
           />
         </a>
         <ul>
-          <li><a class="active" href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/work.html">Work</a></li>
-          <li><a href="/contact.html">Contact</a></li>
+          <li><a href="/" class="active" title="Home page">Home</a></li>
+          <li><a href="/about.html" title="About Patricia">About</a></li>
+          <li><a href="/work.html" title="Patricia's work">Work</a></li>
+          <li>
+            <a href="/contact.html" title="Contact Patricia">Contact</a>
+          </li>
         </ul>
       </nav>
     </div>
@@ -61,7 +63,14 @@
       <p>Hi I am</p>
       <h1>Patricia Pereira</h1>
       <h2 class="mb-5">Frontend Developer based in Portugal</h2>
-      <div><a href="#contact" class="btn btn-branding">Contact me</a></div>
+      <div>
+        <a
+          href="/contact.html"
+          class="btn btn-branding"
+          title="Contact Patricia"
+          >Contact me</a
+        >
+      </div>
     </div>
     <p class="text-center m-5">
       Featured Project which my best projects be choice to show
@@ -84,7 +93,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View Project</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="View Yogurt Project"
+              >View Project</a
+            >
           </div>
         </div>
       </div>
@@ -98,7 +112,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View Project</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="View Weather Project"
+              >View Project</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -126,7 +145,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">View Project</a>
+            <a
+              href="/work.html"
+              class="btn btn-branding-outline"
+              title="View Dictionary Project"
+              >View Project</a
+            >
           </div>
         </div>
       </div>
@@ -135,29 +159,53 @@
           class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex"
         >
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Let's work together</p>
           </div>
           <div>
-            <a href="" class="btn btn-branding mt-3">Contact me</a>
+            <a href="/contact.html" class="btn btn-branding mt-3">Contact me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-          <a href="mailto:leila@daraei.me" class="email-link"
+          <a
+            href="mailto:leila@daraei.me"
+            class="email-link"
+            title="Email Patricia"
             >leila@daraei.me
           </a>
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="https//www.instagram.com/leila">
+          <a
+            href="https//www.instagram.com/leila"
+            title="Instagram Profile"
+            target="_blank"
+          >
             <i class="fa-brands fa-instagram"></i
           ></a>
-          <a href="https//www.github.com/leila">
+          <a
+            href="https//www.github.com/leila"
+            title="github Profile"
+            target="_blank"
+          >
             <i class="fa-brands fa-github"></i
           ></a>
-          <a href="https//www.twitter.com/leila">
+          <a
+            href="https//www.twitter.com/leila"
+            title="Twitter Profile"
+            target="_blank"
+          >
             <i class="fa-brands fa-twitter"></i
           ></a>
         </div>
+        <p class="text-center mt-5">
+          ✌️This project was coded by Leila Daraei, and it is
+          <a
+            href="https://github.com/LeilaDaraei/portfolio-homework"
+            target="_blank"
+            class="git-rep"
+            >open-sourced</a
+          >
+        </p>
       </footer>
     </div>
   </body>
