--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
       name="description"
       content="Leila Daraei's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
-    <title>Works Patricia Pereira</title>
+    <title>Works of Patricia | Patricia Pereira</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
