--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       name="description"
       content="Leila Daraei's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
-    <title>About Patricia Pereira</title>
+    <title>About Leila Daraei</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -40,12 +40,12 @@
         <a href="/" title="Home page">
           <img
             src="pictures/logo-large.png"
-            alt="Patricia's logo"
+            alt="logo"
             class="logo d-none d-md-block"
           />
           <img
             src="pictures/logo-small.jpeg"
-            alt="Patricia's logo"
+            alt="logo"
             class="logo d-block d-md-none"
           />
         </a>
@@ -68,13 +68,17 @@
         <div class="row">
           <div class="col-lg-6">
             <div class="content">
-              <h1 class="mb-4">Hi I am Patricia Pereira</h1>
-              <h2 class="mb-4">Frontend Developer, based in Portugal.</h2>
+              <h1 class="mb-4">Hi I am Leila Daraei</h1>
+              <h2 class="mb-4">Frontend Developer, based in Germany.</h2>
               <p class="mb-5">
-                For anyone who wants to start learning code, this workshop is
-                very interesting. You will be challenged with different
-                exercises, and everything is well explained, homework and
-                deadlines are good for keep focus
+                As a self-taught developer, I have a passion for technology and
+                a drive to learn new things. My journey began with Java and
+                Kotlin, but it was the world of UI design that truly captured my
+                attention. Soon after, I realised that web development was
+                essential to creating stunning user interfaces, for over a year
+                now have been enjoying front-end development. I am excited to
+                continue learning and pushing myself to new heights and to see
+                what the future holds. Thank you for visiting my page!
               </p>
               <a href="/work.html" class="btn btn-branding">See my projects</a>
             </div>
@@ -115,14 +119,14 @@
               <i class="fa-brands fa-instagram"></i
             ></a>
             <a
-              href="https//www.github.com/leila"
+              href="https://github.com/LeilaDaraei"
               target="_blank"
               title="github Profile"
             >
               <i class="fa-brands fa-github"></i
             ></a>
             <a
-              href="https//www.twitter.com/leila"
+              href="https://twitter.com/LioleL"
               target="_blank"
               title="Twitter Profile"
             >
