--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
       name="description"
       content="Leila Daraei's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
-    <title>Works of Patricia | Patricia Pereira</title>
+    <title>Works of Leila | Leila Daraei</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -40,12 +40,12 @@
         <a href="/" title="Home page">
           <img
             src="pictures/logo-large.png"
-            alt="Patricia's logo"
+            alt="logo"
             class="logo d-none d-md-block"
           />
           <img
             src="pictures/logo-small.jpeg"
-            alt="Patricia's logo"
+            alt="logo"
             class="logo d-block d-md-none"
           />
         </a>
@@ -67,7 +67,7 @@
         <h3>Email</h3>
         <p><a href="mailto:leila@daraei.me">leila@daraei.me</a></p>
         <h3>Twitter</h3>
-        <p><a href="https//twitter.com/lei_daraei">@daraei.me</a></p>
+        <p><a href="https://twitter.com/LioleL">@daraei.me</a></p>
         <h3>Instagram</h3>
         <p><a href="https//instagram.com/daraei.me">@daraei.me</a></p>
       </div>
