--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Patricia Pereira's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
+      content="Leila Daraei's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
-    <title>Front-end developer - Patricia Pereira</title>
+    <title>Front-end developer - Leila Daraei</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -51,8 +51,8 @@
         </a>
         <ul>
           <li><a href="/" class="active" title="Home page">Home</a></li>
-          <li><a href="/about.html" title="About Patricia">About</a></li>
-          <li><a href="/work.html" title="Patricia's work">Work</a></li>
+          <li><a href="/about.html" title="About Leila">About</a></li>
+          <li><a href="/work.html" title="Leila's work">Work</a></li>
           <li>
             <a href="/contact.html" title="Contact Patricia">Contact</a>
           </li>
@@ -61,7 +61,7 @@
     </div>
     <div class="hero">
       <p>Hi I am</p>
-      <h1>Patricia Pereira</h1>
+      <h1>Leila Daraei</h1>
       <h2 class="mb-5">Frontend Developer based in Portugal</h2>
       <div>
         <a
@@ -73,7 +73,7 @@
       </div>
     </div>
     <p class="text-center m-5">
-      Featured Project which my best projects be choice to show
+      Featured Project which my best projects by choice to show
     </p>
     <div class="container">
       <div class="row mb-5">
@@ -183,14 +183,14 @@
             <i class="fa-brands fa-instagram"></i
           ></a>
           <a
-            href="https//www.github.com/leila"
+            href="https://github.com/LeilaDaraei"
             title="github Profile"
             target="_blank"
           >
             <i class="fa-brands fa-github"></i
           ></a>
           <a
-            href="https//www.twitter.com/leila"
+            href="https://twitter.com/LioleL"
             title="Twitter Profile"
             target="_blank"
           >
