--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
       name="description"
       content="Leila Daraei's portfolio page featuring a selection of her best work in front-end dev. Discover her unique perspective and style, and learn more about her skills and accomplishments."
     />
-    <title>Works Patricia Pereira</title>
+    <title>Works Leila Daraei</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -51,12 +51,12 @@
         </a>
         <ul>
           <li><a href="/" title="Home page">Home</a></li>
-          <li><a href="/about.html" title="About Patricia">About</a></li>
+          <li><a href="/about.html" title="About Leila">About</a></li>
           <li>
-            <a href="/work.html" title="Patricia's work" class="active">Work</a>
+            <a href="/work.html" title="Leila's work" class="active">Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Contact Patricia">Contact</a>
+            <a href="/contact.html" title="Contact Leila">Contact</a>
           </li>
         </ul>
       </nav>
@@ -146,7 +146,7 @@
             <i class="fa-brands fa-github"></i
           ></a>
           <a
-            href="https//www.twitter.com/leila"
+            href="https://twitter.com/LioleL"
             target="_blank"
             title="Twitter Profile"
           >
