changed name and logo

--- a/about.html
+++ b/about.html
@@ -38,27 +38,16 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Home page">
-          <img
-            src="pictures/logo-large.png"
-            alt="logo"
-            class="logo d-none d-md-block"
-          />
-          <img
-            src="pictures/logo-small.jpeg"
-            alt="logo"
-            class="logo d-block d-md-none"
-          />
+          <i class="fa-solid fa-display logo"> Leila </i>
         </a>
         <ul>
           <li><a href="/" title="Home page">Home</a></li>
           <li>
-            <a href="/about.html" title="About Patricia" class="active"
-              >About</a
-            >
+            <a href="/about.html" title="About Leila" class="active">About</a>
           </li>
-          <li><a href="/work.html" title="Patricia's work">Work</a></li>
+          <li><a href="/work.html" title="Leila's work">Work</a></li>
           <li>
-            <a href="/contact.html" title="Contact Patricia">Contact</a>
+            <a href="/contact.html" title="Contact Leila">Contact</a>
           </li>
         </ul>
       </nav>
@@ -84,11 +73,7 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <img
-              src="/pictures/her.png"
-              alt="Patricia Pereira"
-              class="img-fluid"
-            />
+            <img src="/pictures/ai.jpg" alt="Leila" class="img-fluid" />
           </div>
         </div>
         <footer>
