--- a/contact.html
+++ b/contact.html
@@ -38,23 +38,14 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Home page">
-          <img
-            src="pictures/logo-large.png"
-            alt="logo"
-            class="logo d-none d-md-block"
-          />
-          <img
-            src="pictures/logo-small.jpeg"
-            alt="logo"
-            class="logo d-block d-md-none"
-          />
+          <i class="fa-solid fa-display logo"> Leila </i>
         </a>
         <ul>
           <li><a href="/" title="Home page">Home</a></li>
-          <li><a href="/about.html" title="About Patricia">About</a></li>
-          <li><a href="/work.html" title="Patricia's work">Work</a></li>
+          <li><a href="/about.html" title="About Leila">About</a></li>
+          <li><a href="/work.html" title="Leila's work">Work</a></li>
           <li>
-            <a href="/contact.html" class="active" title="Contact Patricia"
+            <a href="/contact.html" class="active" title="Contact Leila"
               >Contact</a
             >
           </li>
@@ -67,7 +58,7 @@
         <h3>Email</h3>
         <p><a href="mailto:leila@daraei.me">leila@daraei.me</a></p>
         <h3>Twitter</h3>
-        <p><a href="https://twitter.com/LioleL">@daraei.me</a></p>
+        <p><a href="https://twitter.com/LioleL">@LioleL</a></p>
         <h3>Instagram</h3>
         <p><a href="https//instagram.com/daraei.me">@daraei.me</a></p>
       </div>
@@ -97,14 +88,14 @@
             <i class="fa-brands fa-instagram"></i
           ></a>
           <a
-            href="https//www.github.com/leila"
+            href="https//www.github.com/LeilaDaraei"
             target="_blank"
             title="github Profile"
           >
             <i class="fa-brands fa-github"></i
           ></a>
           <a
-            href="https//www.twitter.com/leila"
+            href="https//www.twitter.com/LioleL"
             target="_blank"
             title="Twitter Profile"
           >
