--- a/index.html
+++ b/index.html
@@ -38,23 +38,14 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Home page">
-          <img
-            src="pictures/logo-large.png"
-            alt="Patricia logo"
-            class="logo d-none d-md-block"
-          />
-          <img
-            src="pictures/logo-small.jpeg"
-            alt="Patricia logo"
-            class="logo d-block d-md-none"
-          />
+          <i class="fa-solid fa-display logo"> Leila </i>
         </a>
         <ul>
           <li><a href="/" class="active" title="Home page">Home</a></li>
           <li><a href="/about.html" title="About Leila">About</a></li>
           <li><a href="/work.html" title="Leila's work">Work</a></li>
           <li>
-            <a href="/contact.html" title="Contact Patricia">Contact</a>
+            <a href="/contact.html" title="Contact Leila">Contact</a>
           </li>
         </ul>
       </nav>
@@ -64,10 +55,7 @@
       <h1>Leila Daraei</h1>
       <h2 class="mb-5">Frontend Developer based in Portugal</h2>
       <div>
-        <a
-          href="/contact.html"
-          class="btn btn-branding"
-          title="Contact Patricia"
+        <a href="/contact.html" class="btn btn-branding" title="Contact Leila"
           >Contact me</a
         >
       </div>
@@ -170,7 +158,7 @@
           <a
             href="mailto:leila@daraei.me"
             class="email-link"
-            title="Email Patricia"
+            title="Email Leila"
             >leila@daraei.me
           </a>
         </div>
