--- a/work.html
+++ b/work.html
@@ -38,16 +38,7 @@
     <div class="container">
       <nav class="d-flex justify-content-between">
         <a href="/" title="Home page">
-          <img
-            src="pictures/logo-large.png"
-            alt="Patricia's logo"
-            class="logo d-none d-md-block"
-          />
-          <img
-            src="pictures/logo-small.jpeg"
-            alt="Patricia's logo"
-            class="logo d-block d-md-none"
-          />
+          <i class="fa-solid fa-display logo"> Leila </i>
         </a>
         <ul>
           <li><a href="/" title="Home page">Home</a></li>
