--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
           ></a>
         </div>
         <p class="text-center mt-5">
-          ✌️This project was coded by Leila Daraei, and it is
+          ✌️This project was coded by
+          <a href="https://daraei.me">Leila Daraei</a>, and it is
           <a
             href="https://github.com/LeilaDaraei/portfolio-homework"
             target="_blank"
