--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
           <div class="col-lg-6">
             <div class="content">
               <h1 class="mb-4">Hi I am Leila Daraei</h1>
-              <h2 class="mb-4">Frontend Developer, based in Germany.</h2>
+              <h2 class="mb-4">Frontend Developer, based in Germany</h2>
               <p class="mb-5">
                 As a self-taught developer, I have a passion for technology and
                 a drive to learn new things. My journey began with Java and
