--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="hero">
       <p>Hi I am</p>
       <h1>Leila Daraei</h1>
-      <h2 class="mb-5">Frontend Developer based in Portugal</h2>
+      <h2 class="mb-5">Frontend Developer based in Germany</h2>
       <div>
         <a href="/contact.html" class="btn btn-branding" title="Contact Leila"
           >Contact me</a
